# ark.nvim

./: .dockerignore  .gitignore  .nvimlog  .r  AGENTS.md  BUILDING.md  CHANGELOG.md  Cargo.toml  README.md  SPEC.md  TODO-product-readiness.md  TODO-upstream-sync-ease.md  ark-terminal-todo.md  justfile  release-manifest.json  rust-toolchain.toml  rustfmt-toolchain.toml
crates/ark-lsp/: Cargo.toml  build.rs
crates/ark-lsp-core/: Cargo.toml  README.md  UPSTREAM_STATE_MODEL.md
crates/ark-lsp-core/src/: analysis.rs  attached.rs  console.rs  fixtures.rs  host.rs  lib.rs  lsp.rs  runtime.rs  url.rs
crates/ark-lsp-core/src/lsp/: TODO.md  backend.rs  call_context.rs  capabilities.rs  definitions.rs  detached_metadata.rs  diagnostics.rs  diagnostics_syntax.rs  document.rs  document_context.rs  frontmatter.rs  handlers.rs  help_topic.rs  indent.rs  indexer.rs  main_loop.rs  references.rs  session_bridge.rs  session_bridge_runtime.rs  state.rs  state_handlers.rs  statement_range.rs  symbols.rs  target_context.rs  targets_project.rs  workspace_walker.rs
crates/ark-lsp-core/src/lsp/code_action/: mod.rs  targets.rs
crates/ark-lsp-core/src/lsp/completions/: completion_item.rs  mod.rs  plan.rs  provide.rs  resolve.rs
crates/ark-lsp-core/src/lsp/session_bridge/: README.md  completion.rs  protocol.rs
crates/ark-lsp-core/src/lsp/snapshots/: ark_lsp_core__lsp__diagnostics__tests__dotty_assignment_basic.snap  ark_lsp_core__lsp__diagnostics__tests__dotty_assignment_named.snap  ark_lsp_core__lsp__diagnostics__tests__dotty_assignment_recursive.snap  ark_lsp_core__lsp__diagnostics__tests__dotty_right_assignment_basic.snap  ark_lsp_core__lsp__diagnostics__tests__missing_namespace_rhs.snap  ark_lsp_core__lsp__diagnostics__tests__mixed_syntax_and_semantic_diagnostics-2.snap  ark_lsp_core__lsp__diagnostics__tests__mixed_syntax_and_semantic_diagnostics.snap  ark_lsp_core__lsp__diagnostics_syntax__tests__error_precision.snap  ark_lsp_core__lsp__diagnostics_syntax__tests__for_loop_with_no_body.snap  ark_lsp_core__lsp__diagnostics_syntax__tests__function_definition_with_no_body-2.snap  ark_lsp_core__lsp__diagnostics_syntax__tests__function_definition_with_no_body.snap  ark_lsp_core__lsp__diagnostics_syntax__tests__if_statement_with_no_consequence.snap  ark_lsp_core__lsp__diagnostics_syntax__tests__repeat_loop_with_no_body.snap  ark_lsp_core__lsp__diagnostics_syntax__tests__repeated_call_arguments_without_delimiter.snap  ark_lsp_core__lsp__diagnostics_syntax__tests__syntax_error_truncation.snap  ark_lsp_core__lsp__diagnostics_syntax__tests__unmatched_binary_operator.snap  ark_lsp_core__lsp__diagnostics_syntax__tests__unmatched_braces-2.snap  ark_lsp_core__lsp__diagnostics_syntax__tests__unmatched_braces.snap  ark_lsp_core__lsp__diagnostics_syntax__tests__unmatched_call_delimiter-2.snap  ark_lsp_core__lsp__diagnostics_syntax__tests__unmatched_call_delimiter-3.snap  ark_lsp_core__lsp__diagnostics_syntax__tests__unmatched_call_delimiter.snap  ark_lsp_core__lsp__diagnostics_syntax__tests__unmatched_call_delimiter_with_trailing_info.snap  ark_lsp_core__lsp__diagnostics_syntax__tests__unmatched_closing_token-3.snap  ark_lsp_core__lsp__diagnostics_syntax__tests__unmatched_closing_token_precision.snap  (+54 more)
crates/ark-lsp-support/: Cargo.toml
crates/ark-lsp-support/src/: lib.rs  notifications.rs
crates/ark-lsp-support/src/traits/: cursor.rs  node.rs  point.rs  string.rs
crates/ark-lsp/src/: console.rs  lib.rs  lsp.rs  main.rs  product.rs  treesitter.rs
crates/ark-lsp/src/lsp/: backend.rs  document.rs  document_context.rs  main_loop.rs  state_handlers.rs
crates/ark-lsp/src/lsp/completions/: provide.rs  types.rs
crates/ark-terminal/: Cargo.toml
crates/ark-terminal/src/: cli.rs  enhanced.rs  input.rs  keys.rs  lib.rs  lsp_client.rs  lsp_runtime.rs  main.rs  prompt.rs  pty.rs  raw_terminal.rs  render.rs  status.rs  trace.rs
(+511 files in other folders)
