[package]
name = "ark-lsp-core"
version = "0.1.251"
description = "Shared LSP implementation for ark.nvim host crates."

authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
aether_lsp_utils.workspace = true
aether_parser.workspace = true
aether_path.workspace = true
aether_syntax.workspace = true
anyhow.workspace = true
ark-lsp-support.workspace = true
async-trait.workspace = true
biome_line_index.workspace = true
biome_rowan.workspace = true
bus.workspace = true
ctor.workspace = true
ego-tree.workspace = true
futures.workspace = true
harp.workspace = true
home.workspace = true
libc.workspace = true
libr.workspace = true
log.workspace = true
nix.workspace = true
notify.workspace = true
oak_semantic.workspace = true
once_cell.workspace = true
regex.workspace = true
salsa.workspace = true
scraper.workspace = true
serde.workspace = true
serde_json.workspace = true
stdext.workspace = true
streaming-iterator.workspace = true
strum.workspace = true
tokio.workspace = true
tower-lsp.workspace = true
tracing.workspace = true
tree-sitter.workspace = true
tree-sitter-r.workspace = true
url.workspace = true
uuid.workspace = true
walkdir.workspace = true
yaml-rust2.workspace = true

[dev-dependencies]
assert_matches.workspace = true
insta.workspace = true
oak_semantic = { workspace = true, features = ["testing"] }
oak_package_metadata.workspace = true
stdext = { workspace = true, features = ["testing"] }
tempfile.workspace = true
