[package]
name = "ark-lsp"
version = "0.1.251"
description = "Detached stdio LSP binary for ark.nvim."

authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
ark-lsp-core.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[build-dependencies]
serde_json.workspace = true
